# advent2025

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  template.txt
src/point/: mod.rs
