[package]
name = "advent_of_code"
version = "0.12.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []
ci = []

[dependencies]
log = "0.4.29"
sscanf = "0.4.4"
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
rayon = "1.11.0"
disjoint = "0.8.0"
itertools = "0.14.0"

# lpsolve builds fast, but it's really verbose by default
# added a set_verbose() method, TODO: upstream
[dependencies.good_lp]
git = "https://github.com/cdparks/good_lp"
rev = "722852136beadbae196bf19da9d40cbf153b3d63"
version = "1.14.2"
features = ["lpsolve"]
default-features = false

# Solution dependencies
